welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:13: error: ')' expected but ';' found.
    	prendBiscuit();
                      ^